提交登录和商铺接口

--- a/litemall-db/src/main/resources/application-dep.properties
+++ b/litemall-db/src/main/resources/application-dep.properties
@@ -3,10 +3,10 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/litemall?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&verifyServerCertificate=false&useSSL=false
+spring.datasource.druid.url=jdbc:mysql://60.205.208.46:3306/litemall?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&verifyServerCertificate=false&useSSL=false
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.username=litemall
-spring.datasource.druid.password=litemall123456
+spring.datasource.druid.username=root
+spring.datasource.druid.password=MaChao@1024
 spring.datasource.druid.initial-size=10
 spring.datasource.druid.max-active=50
 spring.datasource.druid.min-idle=10
