修改接口默认参数

--- a/litemall-wx-api/src/main/resources/application-dep.properties
+++ b/litemall-wx-api/src/main/resources/application-dep.properties
@@ -22,7 +22,7 @@ spring.datasource.druid.filters=stat,wall,log4j
 
 
 logging.level.root=ERROR
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=error
 logging.level.org.mybatis=ERROR
 logging.level.org.linlinjava.litemall.db=ERROR
 logging.level.org.linlinjava.litemall=DEBUG
