更改登录接口

--- a/litemall-wx-api/src/main/resources/application-dep.properties
+++ b/litemall-wx-api/src/main/resources/application-dep.properties
@@ -27,8 +27,10 @@ logging.level.org.mybatis=ERROR
 logging.level.org.linlinjava.litemall.db=ERROR
 logging.level.org.linlinjava.litemall=DEBUG
 
-wx.app-id=wxa5b486c6b918ecfb
-wx.app-secret=e04004829d4c383b4db7769d88dfbca1
+#wx.app-id=wxa5b486c6b918ecfb
+wx.app-id=wxa3b518d2e0be458a
+#wx.app-secret=e04004829d4c383b4db7769d88dfbca1
+wx.app-secret=b46c2acc7311f1af76cedd350b23f00e
 wx.mch-id=
 wx.mch-key=
 wx.notify-url=
