增加员工端和swagger

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>litemall-wx-api</module>
         <module>litemall-admin-api</module>
         <module>litemall-all</module>
+        <module>eats-employee-api</module>
     </modules>
 
     <dependencyManagement>
