--- a/litemall-db/pom.xml
+++ b/litemall-db/pom.xml
@@ -36,6 +36,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.linlinjava</groupId>
+            <artifactId>litemall-core</artifactId>
+        </dependency>
 
     </dependencies>
 
