--- a/eats-employee-api/pom.xml
+++ b/eats-employee-api/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>weixin-java-miniapp</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
+            <version>1.3.2.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
