--- a/eats-employee-api/src/main/resources/application-dep.properties
+++ b/eats-employee-api/src/main/resources/application-dep.properties
@@ -35,3 +35,11 @@ wx.mch-id=
 wx.mch-key=
 wx.notify-url=
 
+#################redis基础配置#################
+spring.redis.database=0
+spring.redis.host=47.104.143.110
+spring.redis.password=
+spring.redis.port=6379
+# 连接超时时间 单位 ms（毫秒）
+spring.redis.timeout=3000
+
