--- a/litemall-db/src/main/resources/application-dep.properties
+++ b/litemall-db/src/main/resources/application-dep.properties
@@ -21,9 +21,9 @@ spring.datasource.druid.time-between-eviction-runs-millis=60000
 spring.datasource.druid.filters=stat,wall,log4j
 
 
-logging.level.root=ERROR
-logging.level.org.springframework=ERROR
-logging.level.org.mybatis=ERROR
-logging.level.org.linlinjava.litemall.db=DEBUG
-logging.level.org.linlinjava.litemall=ERROR
+logging.level.root=info
+logging.level.org.springframework=info
+logging.level.org.mybatis=info
+logging.level.org.linlinjava.litemall.db=info
+logging.level.org.linlinjava.litemall=info
 
