--- a/eats-employee-api/src/main/resources/application-dep.properties
+++ b/eats-employee-api/src/main/resources/application-dep.properties
@@ -24,7 +24,7 @@ spring.datasource.druid.filters=stat,wall,log4j
 logging.level.root=info
 logging.level.org.springframework=info
 logging.level.org.mybatis=info
-logging.level.org.linlinjava.litemall.db=info
+logging.level.org.linlinjava.litemall.db=debug
 logging.level.org.linlinjava.litemall=info
 
 
