--- a/litemall-core/src/main/resources/application-dev.properties
+++ b/litemall-core/src/main/resources/application-dev.properties
@@ -1,1 +1,7 @@
 swagger.enable=true
+
+sms.aliyun.accessId=LTAIhPsXYZMpxhpu
+sms.aliyun.accessSecret=HljyMmKrovEZIUjGPnaydRTN3CKkqz
+sms.aliyun.signName=\u59DA\u5C0F\u5F3A
+
+sms.timeout.time=600
