--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,16 @@
     <version>0.1.0</version>
     <packaging>pom</packaging>
 
-    <parent>
+    <!--<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.12.RELEASE</version>
         <relativePath/>
+    </parent>-->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.0.M6</version>
     </parent>
 
     <properties>
