--- a/eats-employee-api/src/main/resources/application-dep.properties
+++ b/eats-employee-api/src/main/resources/application-dep.properties
@@ -43,9 +43,9 @@ spring.redis.password=
 spring.redis.port=6379
 spring.redis.timeout=3000
 
-sms.aliyun.accessId=LTAIhPsXYZMpxhpu
-sms.aliyun.accessSecret=HljyMmKrovEZIUjGPnaydRTN3CKkqz
-sms.aliyun.signName=\u59DA\u5C0F\u5F3A
+sms.aliyun.accessId=
+sms.aliyun.accessSecret=
+sms.aliyun.signName=
 
 sms.timeout.time=600
 
